# docfabric

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  dev.sh
.claude-plugin/: marketplace.json
.github/workflows/: release-images.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/docfabric/: config.py  main.py
backend/src/docfabric/api/: router.py
backend/src/docfabric/conversion/: converter.py
backend/src/docfabric/db/: repository.py  tables.py
backend/src/docfabric/mcp/: server.py
backend/src/docfabric/models/: document.py
backend/src/docfabric/service/: document.py
backend/tests/: test_api.py  test_converter.py  test_mcp.py  test_models.py  test_repository.py  test_service.py  test_storage.py
docker/: docker-compose.yml
docs/: api-contracts.md  architecture.md  dependencies.md  frontend-architecture.md  implementation-phases.md  index.md  mcp-example.json  open-questions.md  prd.md  releasing.md  running.md
examples/docker-compose/: docker-compose.yml
frontend/: Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf.template  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ConfirmDialog.tsx  Pagination.tsx  StatusBadge.tsx  UploadDialog.tsx
frontend/src/pages/: DocumentDetailPage.tsx  DocumentListPage.tsx  DocumentPreviewPage.tsx
frontend/src/types/: document.ts
plugins/docfabric/.claude-plugin/: plugin.json
src/docfabric/: storage.py
tests/: conftest.py  test_config.py  test_models.py
(+7 files in other folders)
