[project]
name = "docfabric"
version = "0.1.0"
description = "Document infrastructure layer for AI-optimized access"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "pydantic>=2",
    "pydantic-settings",
    "docling",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "mcp[cli]>=1.9",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "httpx",
    "fastmcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docfabric"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
